[package]
name = "rust-ev-calc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
priority-queue = "1.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"  # or the latest version available
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
console_log = "0.2"
haversine-rs = "0.3"
geo = "0.29"
geojson = { version = "0.22", features = ["geo-types"] }
delaunator = "1.0.2"
rstar = "0.9"